--- a/src/main.scss
+++ b/src/main.scss
@@ -1,242 +1,215 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@300;400;700&display=swap');
-
-:root {
-
-  /* COLOURS */
-
-  /* BACKGROUND-GRADIENT */
-
-  --clr-gradient-violet: hsl(273, 75%, 66%);
-  --clr-gradient-blue: hsl(240, 73%, 65%);
-
-  /* PRIMARY COLOURS */
-
-  --clr-primary-blue: hsl(238, 29%, 16%);
-  --clr-primary-red: hsl(14, 88%, 65%);
-
-  /* NEUTRAL COLOURS */
-
-  --clr-neutral-gray-200: hsl(240, 5%, 91%);
-  --clr-neutral-gray-600: hsl(240, 6%, 50%);
-  --clr-neutral-gray-800: hsl(237, 12%, 33%);
-
-  /* FONTS */
-
-  --ff-main: 'Kumbh Sans', sans-serif;
-}
-
-* {
+//Primary Text colors
+$very-dark-desaturated-blue: hsl(238, 29%, 16%);
+$soft-red: hsl(14, 88%, 65%);
+// Background gradient:
+$soft-violet: hsl(273, 75%, 66%);
+$soft-blue: hsl(240, 73%, 65%);
+//Neutral Text colors
+$very-dark-grayish-blue: hsl(237, 12%, 33%);
+$dark-grayish-blue: hsl(240, 6%, 50%);
+//Dividers
+$light-grayish-blue: hsl(240, 5%, 91%);
+html {
   box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+body {
   margin: 0;
   padding: 0;
-}
-
-body {
-  font-family: var(--ff-main);
+  background: linear-gradient($soft-violet, $soft-blue);
+  color: $dark-grayish-blue;
+  font-family: "Kumbh Sans", sans-serif;
+  font-size: 12px;
+  line-height: 18px;
+  font-weight: 400;
+  /*min-height and grid place-items center in a body to put attribution right under the component.
+  but generally I think it's better to put height and grid on container */
+  /*min-height so linear-gradient would not clipp at the bottom */
   min-height: 100vh;
-  background: linear-gradient(var(--clr-gradient-violet) 13%, var(--clr-gradient-blue));
   display: grid;
   place-items: center;
 }
-
-.faq {
-  background-color: white;
-  width: 86.5%;
-  max-width: 360px;
-  border-radius: 24px;
-  position: relative;
+h1 {
+  color: $very-dark-desaturated-blue;
+  font-size: 32px;
+  line-height: 32px;
 }
-
-/* MOBILE ILLUSTRATIONS */
-
-.faq::before {
-  content: "";
-  background: url(images/illustration-woman-online-mobile.svg) no-repeat;
-  width: 268px;
-  height: 180px;
-  position: absolute;
-  top: 0;
-  left: 50%;
-  transform: translate(-55%, -55%);
+button {
+  color: $very-dark-grayish-blue;
+  font-size: 14px;
+  line-height: 14px;
 }
-
-.faq::after {
-  content: "";
-  background: url(images/bg-pattern-mobile.svg) no-repeat;
-  width: 268px;
-  height: 180px;
-  position: absolute;
-  top: 6.5rem;
-  left: 50%;
-  transform: translate(-45%, -53%);
+/* https://developer.mozilla.org/en-US/docs/Web/CSS/:focus-visible */
+/* Remove the focus indicator on mouse-focus for browsers that do support :focus-visible */
+button:focus:not(:focus-visible) {
+  outline: 0;
 }
-
-/* KEYFRAMES */
-
-@keyframes boxHop {
-  from {
-    transform: translate(-55%, -55%);
-  }
-  50% {
-    transform: translate(-55%, -57.5%);
-  }
-  to {
-    transform: translate( -55% ,-55%);
-  }
+button:focus-visible {
+  /* Draw a very noticeable focus style for
+     keyboard-focus on browsers that do support
+     :focus-visible */
+  outline: 2px dashed $soft-red;
+  outline-offset: 0px;
 }
-
-
-/* QUESTION TITLE + ARROW */
-
-.questions {
-  padding-inline: 1.5rem .5rem;
-  padding-block: 9rem 3rem;
+#root {
+  width: 100%;
 }
-
-.questions__title {
-  text-align: center;
-  font-size: 1.92rem;
-  color: var(--clr-primary-blue);
-  padding-block-end: .75rem;
+.container {
+  max-width: 1440px;
+  width: 100%;
 }
-
-.question {
-  color: var(--clr-neutral-gray-800);
-  font-weight: 400;
-}
-
-.question__title {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-  align-items: center;
-  transition: color .15s ease-in-out;
-}
-
-.question__title:hover {
-  color: var(--clr-primary-red);
-  cursor: pointer;
-}
-
-.question__title::after {
-  content: "";
-  display: block;
-  width: 95%;
-  background: var(--clr-neutral-gray-200);
-  height: 1px;
-  position: absolute;
-  bottom: 0;
-}
-
-.question__title__text {
-  font-size: .8rem;
-  line-height: 1.3;
-}
-
-.question__button {
-  border: 0;
-  background: inherit;
-  padding: 1rem;
-  cursor: pointer;
-}
-
-/* ANSWERS */
-
-.question__text {
-  display: none;
-  position: relative;
-  color: var(--clr-neutral-gray-600);
-}
-
-.question__text:before {
-  content: "";
-  display: block;
-  width: 112%;
-  background: var(--clr-neutral-gray-200);
-  height: 1px;
-  position: absolute;
-  bottom: 0;
-}
-
-/* TOGGLE STYLES */
-
-.show-text .question__text {
-  display: block;
-  font-size: .765rem;
-  line-height: 1.7;
-  width: 85%;
-  padding-block-end: 1rem;
-}
-
-.show-text .question__button {
-  transform: rotate(180deg);
-}
-
-.show-text .question__title {
+.font-weight-bold {
   font-weight: 700;
-  color: var(--clr-primary-blue);
 }
-
-.show-text .question__title::after {
-  display: none;
+.component {
+  margin: 0 auto;
+  max-width: 920px;
+  width: 100%;
+  background-color: #ffffff;
+  background-image: url(./images/bg-pattern-desktop.svg);
+  background-position: -565px -295px;
+  background-repeat: no-repeat;
+  box-shadow: 0px 50px 50px -20px rgba(53, 18, 122, 0.497159);
+  border-radius: 23px;
+  display: flex;
 }
-
-/* MEDIA QUERIES */
-
-@media screen and (min-width: 650px) {
-
-  .faq {
-    max-width: 500px;
-  }
-}
-
-@media screen and (min-width: 900px) {
-
-  .faq {
-    height: 510px;
-    max-width: 925px;
-    display: flex;
-    justify-content: flex-end;
-    background:
-    url(images/illustration-woman-online-desktop.svg) bottom 3.1rem left -5.1rem no-repeat,
-    url(images/bg-pattern-desktop.svg) bottom -10rem left -36rem no-repeat;
-    background-color: white; 
-  }
-
-  .faq::before {
-    content: "";
-    background: url(images/illustration-box-desktop.svg) no-repeat;
-    width: 140px;
-    height: 190px;
+.illustration {
+  width: 100%;
+  position: relative;
+  &__box {
     position: absolute;
-    top: 66%;
-    left: -1.6%;
-    transform: translate(-55%, -55%);
-    animation: boxHop 2s ease-in-out;
-    animation-iteration-count: infinite;
+    z-index: 999;
+    top: 200px;
+    left: -95px;
   }
-  
-  .faq::after {
+  &__woman-desktop {
+    position: absolute;
+    top: 60px;
+    left: -77px;
+    clip-path: inset(0px 0px 0px 77px);
+  }
+  &__woman-mobile {
     display: none;
   }
-
-  .questions {
-    width: 50%;
-    padding-block-start: 4.5rem;
-    padding-inline-end: 5rem;
+}
+.faq {
+  width: 100%;
+  padding-top: 65px;
+  padding-bottom: 80px;
+  &__title {
+    margin: 0;
+    padding-bottom: 25px;
   }
-
-  .questions__title {
-    text-align: left;
-    padding-block-end: 1.5rem;
-    font-size: 2.2rem;
+  &__question {
+    max-width: 350px;
+    width: 100%;
+    border-bottom: 1px solid $light-grayish-blue;
   }
-
-  .question {
-    font-weight: 400;
+  &__question-button {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border: none;
+    background-color: transparent;
+    padding: 0px;
+    cursor: pointer;
+    padding-top: 18px;
+    padding-bottom: 18px;
+    &::after {
+      content: url(./images/icon-arrow-down.svg);
+      margin-right: 17px;
+      transform: rotate(90deg);
+    }
+    &:hover {
+      color: $soft-red;
+    }
   }
+  &__desc {
+    margin-left: -40px;
+    padding-right: 17px;
+    margin-top: 0;
+    margin-bottom: 0;
+    height: 0;
+    overflow: hidden;
+    transition: all 200ms ease-out;
+  }
+}
 
-  .question__title p {
-    font-size: .9rem;
+.faq__desc.show-description {
+  height: 2rem;
+  margin-bottom: 15px;
+}
+/* Arrows */
+/* closed */
+.faq__question-button::after {
+  transition: transform 300ms ease-out;
+}
+/* open */
+.font-weight-bold::after {
+  transform: rotate(720deg);
+}
+@media only screen and (max-width: 800px) {
+  .illustration__woman-desktop {
+    max-width: 120%;
+  }
+}
+
+    
+          
+            
+    
+
+          
+    
+    
+  
+@media only screen and (max-width: 700px) {
+  .container {
+    /* added padding here to mobile container,
+    so illustration__woman-desctop would not be cropped at the top */
+    padding-top: 105px;
+  }
+  .component {
+    max-width: 327px;
+    background-image: url(./images/bg-pattern-mobile.svg);
+    background-position: top;
+    flex-direction: column;
+  }
+  .illustration {
+    &__box {
+      display: none;
+    }
+    &__woman-desktop {
+      display: none;
+    }
+    &__woman-mobile {
+      display: block;
+      margin: 0 auto;
+      position: absolute;
+      top: -105px;
+      left: 12px;
+    }
+  }
+  .faq {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 132px;
+    padding-bottom: 48px;
+    &__question {
+      max-width: 279px;
+    }
+    &__question-button {
+      width: 279px;
+      font-size: 13px;
+      line-height: 13px;
+      &::after {
+        padding-right: 0px;
+      }
+    }
   }
 }
